# dist

./: .gitmodules  CMakeLists.txt  pre-install.sh
scripts/: dist_run.sh  hosts  local.sh  run_xlearn_dist_train.sh  run_xlearn_local_train.sh  start_scheduler.sh  start_server.sh  start_worker.sh  stop_xlearn_dist_train.sh
src/base/: CMakeLists.txt  format_print.h  vector.h
src/c_api/: CMakeLists.txt
src/data/: CMakeLists.txt  data_structure.h  hyper_parameters.h  model_parameters.cc  model_parameters.h  parameter_initializer.h
src/distributed/: CMakeLists.txt  dist_checker.cc  dist_cross_entropy_loss.cc  dist_cross_entropy_loss.h  dist_ffm_score.cc  dist_ffm_score.h  dist_fm_score.cc  dist_fm_score.h  dist_linear_score.cc  dist_linear_score.h  dist_loss.h  dist_score_function.cc  dist_score_function.h  dist_score_test.cc  dist_solver.cc  dist_train_main.cc  dist_trainer.cc  parameter_server.cc  parameter_server.h  server.h  server_handler.h  server_test.cc  worker.h
src/loss/: CMakeLists.txt  cross_entropy_loss.cc  cross_entropy_loss.h  loss.cc  loss.h  squared_loss.cc  squared_loss.h
src/score/: CMakeLists.txt  ffm_score.cc  ffm_score.h  fm_score.cc  fm_score.h  linear_score.cc  linear_score.h  score_function.h
src/solver/: CMakeLists.txt  checker.cc  solver.cc  trainer.cc  trainer.h
